--- a/index.html
+++ b/index.html
@@ -3,8 +3,34 @@
   <head>
     <meta charset="UTF-8">
     <title>RPG Mapper JS!</title>
+    <link rel="stylesheet" href="css/photon.css">
+    <script src="main.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
+      <div class="window">
+    <header class="toolbar toolbar-header">
+        <h1 class="title">RPG Mapper JS</h1>
+
+        <div class="toolbar-actions">
+        <div class="btn-group">
+          <button class="btn btn-default">
+            <span title="Map Editor" class="icon icon-home"></span>
+          </button>
+          <button class="btn btn-default active">
+            <span title="Tileset Editor" class="icon icon-globe"></span>
+          </button>
+        </div>
+  </div>
+    </header>
+    <div class="window-content">
+        <div class="pane-group">
+            <div class="pane-sm sidebar">...</div>
+            <div class="pane">...</div>
+        </div>
+    </div>
+    <footer class="toolbar toolbar-footer">
+        <h1 class="title">© 2017 Scott Huffman, All Rights Reserved</h1>
+    </footer>
+</div>
   </body>
 </html>
