--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <title>RPG Mapper JS!</title>
     <link rel="stylesheet" href="css/photon.css">
-    <script src="main.js" charset="utf-8"></script>
   </head>
-  <body>
-      <div class="window">
+  <body><div class="window">
     <header class="toolbar toolbar-header">
         <h1 class="title">RPG Mapper JS</h1>
 
         <div class="toolbar-actions">
-        <div class="btn-group">
-          <button class="btn btn-default">
-            <span title="Map Editor" class="icon icon-home"></span>
-          </button>
-          <button class="btn btn-default active">
-            <span title="Tileset Editor" class="icon icon-globe"></span>
-          </button>
+            <div class="btn-group">
+                <button class="btn btn-default">
+                    <span title="Map Editor" class="icon icon-home"></span>
+                </button>
+                <button id='tileset-menu-btn' class="btn btn-default">
+                    <span title="Tileset Editor" class="icon icon-globe"></span>
+                </button>
+            </div>
+
+            <div id="current-menu-btns">
+            </div>
         </div>
-  </div>
     </header>
     <div class="window-content">
         <div class="pane-group">
@@ -31,6 +32,8 @@
     <footer class="toolbar toolbar-footer">
         <h1 class="title">© 2017 Scott Huffman, All Rights Reserved</h1>
     </footer>
+
+    <script src='js/main.js'></script>
 </div>
-  </body>
+</body>
 </html>
