--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>RPG Mapper JS!</title>
     <link rel="stylesheet" href="css/photon.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body><div class="window">
     <header class="toolbar toolbar-header">
