Added initial menu

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>RPG Mapper JS!</title>
 	<link rel="stylesheet" href="css/photon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
 <body><div class="window">
 	<header class="toolbar toolbar-header">
