--- a/html/new_project.html
+++ b/html/new_project.html
@@ -4,11 +4,11 @@
         <h2>JS</h2>
     </div>
     <div class="center-project-buttons">
-        <button class="btn btn-default new-project-btn">
+        <button id="new-project-btn" class="btn btn-default new-project-btn">
             <span title="Map Editor" class="icon icon-doc"></span>
             &nbsp&nbsp New Project
         </button>
-        <button class="btn btn-default new-project-btn">
+        <button id="openProject" class="btn btn-default new-project-btn">
             <span title="Map Editor" class="icon icon-folder"></span>
             &nbsp&nbsp Open Existing Project
         </button>
