Can open existing project

--- a/html/new_project.html
+++ b/html/new_project.html
@@ -8,7 +8,7 @@
             <span title="Map Editor" class="icon icon-doc"></span>
             &nbsp&nbsp New Project
         </button>
-        <button id="openProject" class="btn btn-default new-project-btn">
+        <button id="new-project-btn" class="btn btn-default new-project-btn">
             <span title="Map Editor" class="icon icon-folder"></span>
             &nbsp&nbsp Open Existing Project
         </button>
