Removed Tileset page for now.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 				<button class="btn btn-default">
 					<span title="Map Editor" class="icon icon-home"></span>
 				</button>
-				<button id='tileset-menu-btn' class="btn btn-default">
+				<!-- <button id='tileset-menu-btn' class="btn btn-default">
 					<span title="Tileset Editor" class="icon icon-globe"></span>
-				</button>
+				</button> -->
 				<button id='settings-menu-btn' class="btn btn-default">
 					<span title="Settings" class="icon icon-cog"></span>
 				</button>
