Tilesets add button opens file prompt.

--- a/html/settings.html
+++ b/html/settings.html
@@ -1,8 +1,14 @@
 <div class="pane-group">
-    <div class="pane-sm sidebar">
-        <div class="toolbar toolbar-header">
-            <h2 class="title">Settings</h2>
-        </div>
-    </div>
-    <div class="pane">hello</div>
+	<div class="pane pane-sm sidebar">
+		<nav class="nav-group">
+			<h5 class="nav-group-title btn-dropdown">Project Settings</h5>
+		</nav>
+		<nav class="nav-group">
+			<h5 class="nav-group-title btn-dropdown">Tilesets<button id='add-tileset' class='add-settings-btn'><span class="icon icon-plus-circled"></span></button></h5>
+		</nav>
+		<nav class="nav-group">
+			<h5 class="nav-group-title btn-dropdown">Sprites<button class='add-settings-btn'><span class="icon icon-plus-circled"></span></button></h5>
+		</nav>
+	</div>
+
 </div>
