--- a/html/settings.html
+++ b/html/settings.html
@@ -5,10 +5,13 @@
 		</nav>
 		<nav class="nav-group">
 			<h5 class="nav-group-title btn-dropdown">Tilesets<button id='add-tileset' class='add-settings-btn'><span class="icon icon-plus-circled"></span></button></h5>
+			<ul id='tileset-list'>
+
+			</ul>
 		</nav>
 		<nav class="nav-group">
 			<h5 class="nav-group-title btn-dropdown">Sprites<button class='add-settings-btn'><span class="icon icon-plus-circled"></span></button></h5>
 		</nav>
 	</div>
-
+	<div class="pane" id='tileset-image-viewer'></div>
 </div>
