--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<div class="toolbar-actions">
 			<div id="main-menu-btns" class="btn-group">
-				<button class="btn btn-default">
+				<button id="editor-menu-btn" class="btn btn-default">
 					<span title="Map Editor" class="icon icon-home"></span>
 				</button>
 				<!-- <button id='tileset-menu-btn' class="btn btn-default">
