--- a/html/tileset_menu.html
+++ b/html/tileset_menu.html
@@ -1,4 +1,4 @@
 <button id='open-tileset' class='btn btn-default'>
     <span class='icon icon-home icon-folder'></span>
-    &nbsp&nbspOpen Tileset
+    &nbsp;&nbsp;Open Tileset
 </button>
