Added new map code for text field to type name. Unsure if I will keep this concept.

--- a/html/editor.html
+++ b/html/editor.html
@@ -10,6 +10,9 @@
 		</div>
 		<nav class="nav-group">
 			<h5 class="nav-group-title btn-dropdown">Maps<button id='new-map-btn' class='add-settings-btn'><span class="icon icon-plus-circled"></span></button></h5>
+			<form id="new-map-form" style="display: none;">
+				<input class="input" type="text" name="new-map-name">
+			</form>
 			<ul id='map-list'>
 
 			</ul>
