Fixed existing project button to actually load existing projects.

--- a/html/new_project.html
+++ b/html/new_project.html
@@ -8,9 +8,9 @@
             <span title="Map Editor" class="icon icon-doc"></span>
             &nbsp&nbsp New Project
         </button>
-        <button id="new-project-btn" class="btn btn-default new-project-btn">
+        <button id="open-project-btn" class="btn btn-default new-project-btn">
             <span title="Map Editor" class="icon icon-folder"></span>
-            &nbsp&nbsp Open Existing Project
+            &nbsp;&nbsp; Open Existing Project
         </button>
     </div>
 </div>
