--- a/html/editor.html
+++ b/html/editor.html
@@ -18,5 +18,24 @@
 			</ul>
 		</nav>
 	</div>
-	<div class="pane map-viewer" id='map-viewer'></div>
+	<div class="pane">
+		<div class="pane map-viewer" id='map-viewer'>
+		<svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+		    <defs>
+		      <pattern id="smallGrid" width="32" height="32" patternUnits="userSpaceOnUse">
+		        <path d="M 32 0 L 0 0 0 32" fill="none" stroke="gray" stroke-width="0.5"/>
+		      </pattern>
+		      <pattern id="grid" width="128" height="128" patternUnits="userSpaceOnUse">
+		        <rect width="128" height="128" fill="url(#smallGrid)"/>
+		        <path d="M 128 0 L 0 0 0 128" fill="none" stroke="gray" stroke-width="1"/>
+		      </pattern>
+		    </defs>
+
+		    <rect width="100%" height="100%" fill="url(#grid)" />
+		  </svg>
+		</div>
+	</div>
+	<div id='tileset' class="pane pane-sm sidebar pull-right">
+		
+	</div>
 </div>
